--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <div class="emergency">Emergency Repairs Available 24/7</div>
         </div>
     </div>
+
     <nav class="main-nav container">
         <div class="logo">
             <span class="logo-text">PhoneFix</span>
         </div>
+
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#services">Services</a></li>
@@ -28,7 +30,9 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
+
         <button class="btn btn-primary">Book Repair</button>
+
         <button class="mobile-menu-btn">
             <span></span>
             <span></span>
@@ -36,6 +40,7 @@
         </button>
     </nav>
 </header>
+
 <main>
     <section id="home" class="hero">
         <div class="container">
@@ -77,6 +82,7 @@
             </div>
         </div>
     </section>
+
     <section id="services" class="services">
         <div class="container">
             <div class="section-header">
@@ -117,6 +123,7 @@
             </div>
         </div>
     </section>
+
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-header">
@@ -154,11 +161,13 @@
             <h2 class="section-title">Transparent Pricing</h2>
             <p class="section-description">Competitive rates for quality repairs. No hidden fees.</p>
         </div>
+
         <div class="pricing-grid">
             <!-- Plan 1 -->
             <div class="plan-card">
                 <h3 class="plan-title">Screen Repair</h3>
                 <p class="plan-description">Most common screen repairs</p>
+
                 <div class="plan-prices">
                     <div class="price-item">
                         <span class="price-label">iPhone:</span>
@@ -173,14 +182,17 @@
                         <span class="price-value">$79.99</span>
                     </div>
                 </div>
+
                 <ul class="plan-features">
                     <li><i class="fas fa-check"></i> Genuine parts</li>
                     <li><i class="fas fa-check"></i> 90-day warranty</li>
                     <li><i class="fas fa-check"></i> Same day service</li>
                     <li><i class="fas fa-check"></i> Free diagnosis</li>
                 </ul>
+
                 <button class="price-btn">Book Now</button>
             </div>
+
             <!-- Repeat for other plans -->
             <!-- Plan 2 -->
             <div class="plan-card">
@@ -201,14 +213,17 @@
                         <span class="price-value">$59.99</span>
                     </div>
                 </div>
+
                 <ul class="plan-features">
                     <li><i class="fas fa-check"></i> Original batteries</li>
                     <li><i class="fas fa-check"></i> Battery health report</li>
                     <li><i class="fas fa-check"></i> Installation included</li>
                     <li><i class="fas fa-check"></i> Recycling service</li>
                 </ul>
+
                 <button class="btn">Book Now</button>
             </div>
+
             <!-- Plan 3 -->
             <div class="plan-card">
                 <h3 class="plan-title">Full Service</h3>
@@ -228,56 +243,100 @@
                         <span class="price-value">$149.99</span>
                     </div>
                 </div>
+
                 <ul class="plan-features">
                     <li><i class="fas fa-check"></i> Complete diagnosis</li>
                     <li><i class="fas fa-check"></i> Hardware repairs</li>
                     <li><i class="fas fa-check"></i> Software optimization</li>
                     <li><i class="fas fa-check"></i> Water damage treatment</li>
                 </ul>
+
                 <button class="price-btn">Book Now</button>
             </div>
         </div>
     </div>
 </section>
-<section id="about" class="py-20 bg-gray-50">
-    <div class="container mx-auto px-4">
-        <div class="flex flex-col lg:flex-row items-center gap-12">
-            <div class="lg:w-1/2">
-                <img
-                        src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&q=80"
-                        alt="Team collaboration"
-                        class="rounded-lg shadow-xl"
-                />
-            </div>
-            <div class="lg:w-1/2">
-                <h2 class="text-4xl font-bold text-gray-900 mb-6">
-                    We Create Digital Products That Help People
-                </h2>
-                <p class="text-xl text-gray-600 mb-8">
-                    With over 10 years of experience in digital solutions, we've helped hundreds of businesses achieve their goals.
-                </p>
-                <div class="space-y-4">
-                    <div class="flex items-center space-x-3">
-                        <svg class="icon text-green-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M9 12l2 2l4-4m9-2A10 10 0 1 1 12 2a10 10 0 0 1 10 10z" stroke="currentColor" fill="none" stroke-width="2"/></svg>
-                        <span class="text-gray-700">Expert team of designers and developers</span>
-                    </div>
-                    <div class="flex items-center space-x-3">
-                        <svg class="icon text-green-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M9 12l2 2l4-4m9-2A10 10 0 1 1 12 2a10 10 0 0 1 10 10z" stroke="currentColor" fill="none" stroke-width="2"/></svg>
-                        <span class="text-gray-700">High-quality solutions delivered on time</span>
-                    </div>
-                    <div class="flex items-center space-x-3">
-                        <svg class="icon text-green-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M9 12l2 2l4-4m9-2A10 10 0 1 1 12 2a10 10 0 0 1 10 10z" stroke="currentColor" fill="none" stroke-width="2"/></svg>
-                        <span class="text-gray-700">Continuous support and maintenance</span>
-                    </div>
-                    <div class="flex items-center space-x-3">
-                        <svg class="icon text-green-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M9 12l2 2l4-4m9-2A10 10 0 1 1 12 2a10 10 0 0 1 10 10z" stroke="currentColor" fill="none" stroke-width="2"/></svg>
-                        <span class="text-gray-700">Affordable pricing plans for everyone</span>
-                    </div>
+
+<section id="about">
+    <div class="about-h2">
+
+       </div>
+    <div class="about-content">
+        <div class="about-text">
+            <h2>About Us</h2>
+            <p>With over 10 years of experience, PhoneFix Pro has been the trusted name in phone repairs. Our certified technicians ensure quality repairs with genuine parts.</p>
+            <div class="about-grid">
+                <div class="about-stat">
+                    <span class="number">10+</span>
+                    <span>Years Experience</span>
+                </div>
+                <div class="about-stat">
+                    <span class="number">15K+</span>
+                    <span>Repairs Done</span>
+                </div>
+                <div class="about-stat">
+                    <span class="number">50+</span>
+                    <span>Expert Staff</span>
                 </div>
             </div>
+            <ul class="features">
+                <li>✓ 90-Day Warranty on All Repairs</li>
+                <li>✓ Certified Repair Technicians</li>
+                <li>✓ Genuine OEM Parts</li>
+                <li>✓ Same-Day Service Available</li>
+                <li>✓ Free Diagnostic Assessment</li>
+            </ul>
         </div>
+        <img src="https://images.unsplash.com/photo-1599179110793-a77b26b7e250?q=80&w=1771&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Our Shop" class="about-image">
     </div>
 </section>
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <footer class="footer">
     <div class="container">
         <div class="footer-content">
