--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="about-content">
             <div class="about-text">
                 <h2>About Us</h2>
-                <p>With over 10 years of experience, PhoneFix Pro has been the trusted name in phone repairs. Our certified technicians ensure quality repairs with genuine parts.</p>
+                <p>With over 10 years of experience, PhoneFix has been the trusted name in phone repairs. Our certified technicians ensure quality repairs with genuine parts.</p>
                 <div class="about-grid">
                     <div class="about-stat">
                         <span class="number">10+</span>
